--- a/week2/src/main/resources/application.properties
+++ b/week2/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=week2
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
+
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/board_db?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=1949
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
